@@ -1,17 +1,25 @@
 import QtQuick 1.1
 
 Rectangle {
-    property string header: "Header"
-    property string text: "Some description"
+    property string headerText: "Header"
+    property string bodyText: "Some description"
 
     id: root
-    width: 255
-    height: 42
+    width: ((header.paintedWidth < body.paintedWidth)? body.paintedWidth : header.paintedWidth) + 6;
+    height: header.paintedHeight + body.paintedHeight + 4;
+//    width: 255
+//    height: 42
     color: "#bb333232"
     radius: 10
 
+//    Component.onCompleted: {
+//        console.log("Header: " + header.paintedHeight + ", " + header.paintedWidth);
+//        console.log("Body: " + body.paintedHeight + ", " + body.paintedWidth);
+//    }
+
     Text {
-        text: header
+        id: header
+        text: headerText
         color: "#d6d6a1"
         font.bold: true
         verticalAlignment: Text.AlignVCenter
@@ -22,7 +30,8 @@ Rectangle {
         anchors.horizontalCenter: parent.horizontalCenter
 
         Text {
-            text: root.text
+            id: body
+            text: bodyText
             color: "#ffffff"
             verticalAlignment: Text.AlignVCenter
             horizontalAlignment: Text.AlignHCenter
