@@ -1,0 +1,53 @@
+import QtQuick 1.1
+
+Rectangle {
+    property int size: 50
+    property real currentZoom: 1.0
+    property color backgroundColor: "#bb333232"
+
+    color: backgroundColor
+    width: (2 * height) + zoomText.paintedWidth
+    height: size
+    radius: 5
+
+    Component.onCompleted: {
+        zoomInButton.zoomButtonClicked.connect(zoomIn);
+        zoomOutButton.zoomButtonClicked.connect(zoomOut);
+    }
+
+    ZoomButton {
+        id: zoomInButton
+        text: "+"
+        size: parent.height
+        anchors.verticalCenter: parent.verticalCenter
+        anchors.left: parent.left
+    }
+
+    Text {
+        id: zoomText
+        text: (currentZoom * 100) + "%"
+        verticalAlignment: Text.AlignVCenter
+        horizontalAlignment: Text.AlignHCenter
+        font.pointSize: size/2
+        width: 40
+        color: "#ffffff"
+        anchors.verticalCenter: parent.verticalCenter
+        anchors.horizontalCenter: parent.horizontalCenter
+    }
+
+    ZoomButton {
+        id: zoomOutButton
+        text: "-"
+        size: parent.height
+        anchors.verticalCenter: parent.verticalCenter
+        anchors.right: parent.right
+    }
+
+    function zoomIn() {
+        currentZoom += 0.1
+    }
+
+    function zoomOut() {
+        currentZoom -= 0.1
+    }
+}
